fixed display screen overflow

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@ body {
   font-size: 50px;
   background-color: #292f36;
   color: white;
+  overflow: hidden; /*this prevents from numbers to overflow the screen */
+  text-overflow: ellipsis;
 }
 
 .buttons-container {
